--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://user:password@2026.111111.mongodb.net/?appName=2026
+MONGODB_URI=your_database_here
 JWT_SECRET=your_jwt_secret
 WS_PORT=3002
 WS_HTTP_PORT=3003
