--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "recharts": "^3.6.0",
     "ws": "^8.18.3"
   },
   "devDependencies": {
